--- a/app/src/main/res/layout/downmusicrecycleradapter.xml
+++ b/app/src/main/res/layout/downmusicrecycleradapter.xml
@@ -13,7 +13,8 @@
             android:id="@+id/music_name"
             android:layout_width="280dp"
             android:layout_height="wrap_content"
-            android:textSize="16dp"
+            android:textSize="18dp"
+            android:textColor="@color/drak"
             android:textStyle="bold"/>
 
         <TextView
@@ -23,15 +24,15 @@
             android:layout_width="match_parent"
             android:layout_height="20dp"
             android:layout_below="@+id/music_name"
-            android:textSize="12dp"/>
+            android:textSize="10dp"/>
 
     </RelativeLayout>
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:layout_toRightOf="@+id/music_body">
-        <androidx.appcompat.widget.Toolbar
-            android:id="@+id/toolbar"
+        <ImageView
+            android:id="@+id/image"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:gravity="right"/>
