--- a/app/src/main/res/layout/mymusic_layout.xml
+++ b/app/src/main/res/layout/mymusic_layout.xml
@@ -4,7 +4,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="horizontal">
-
+    <View
+        android:layout_marginTop="190dp"
+        android:layout_width="match_parent"
+        android:background="@color/drak"
+        android:layout_height="1dp"/>
     <RelativeLayout
         android:id="@+id/mymusic_up"
         android:layout_width="match_parent"
@@ -16,7 +20,6 @@
 
             <include layout="@layout/mymusic_title_layout" />
         </RelativeLayout>
-
         <RelativeLayout
             android:id="@+id/MyMusic_Select"
             android:layout_width="match_parent"
@@ -34,6 +37,12 @@
         android:layout_below="@+id/mymusic_up">
         <include layout="@layout/mymusic_middle_layout"/>
     </RelativeLayout>
+    <View
+        android:layout_below="@+id/my_music_middle"
+        android:layout_width="match_parent"
+        android:layout_marginTop="2dp"
+        android:background="@color/drak"
+        android:layout_height="1dp"/>
     <RelativeLayout
         android:layout_below="@id/my_music_middle"
         android:id="@+id/my_music_bottom"
