--- a/app/src/main/res/layout/mymusic_middle_layout.xml
+++ b/app/src/main/res/layout/mymusic_middle_layout.xml
@@ -11,6 +11,7 @@
         android:layout_height="20dp"
         android:layout_marginLeft="12dp"
         android:layout_marginTop="10dp"
+        android:textColor="@color/drak"
         android:textStyle="bold"
         android:text="我的音乐"
         android:textSize="15dp" />
@@ -63,6 +64,7 @@
             android:id="@+id/text1"
             android:layout_width="150dp"
             android:layout_height="30dp"
+            android:textColor="@color/drak"
             android:layout_marginLeft="23dp"
             android:layout_marginTop="60dp"
             android:text="我喜欢的音乐"
@@ -74,6 +76,7 @@
             android:layout_height="30dp"
             android:layout_marginLeft="160dp"
             android:layout_marginTop="60dp"
+            android:textColor="@color/drak"
             android:text="私人FM"
             android:textSize="15dp"
             android:textStyle="bold" />
@@ -83,6 +86,7 @@
             android:layout_height="30dp"
             android:layout_marginLeft="270dp"
             android:layout_marginTop="60dp"
+            android:textColor="@color/drak"
             android:text="ACG专区"
             android:textSize="15dp"
             android:textStyle="bold" />
