--- a/app/src/main/res/layout/mymusic_title_layout.xml
+++ b/app/src/main/res/layout/mymusic_title_layout.xml
@@ -29,6 +29,7 @@
                 android:layout_height="40dp"
                 android:layout_marginTop="20dp"
                 android:layout_marginLeft="20dp"
+                android:textColor="@color/drak"
                 android:textSize="20dp"
                 android:textStyle="bold"
                 android:text="请登录"/>
