--- a/app/src/main/res/layout/local_singer_item.xml
+++ b/app/src/main/res/layout/local_singer_item.xml
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-
     <RelativeLayout
         android:id="@+id/music_body"
-        android:layout_width="280dp"
+        android:layout_width="match_parent"
         android:layout_height="60dp">
 
         <TextView
             android:layout_marginLeft="10dp"
-            android:id="@+id/music_name"
-            android:layout_width="280dp"
+            android:id="@+id/singer_name"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="18dp"
             android:textColor="@color/drak"
@@ -20,21 +20,11 @@
         <TextView
             android:layout_marginTop="2dp"
             android:layout_marginLeft="10dp"
-            android:id="@+id/singer_name"
+            android:id="@+id/music_num"
             android:layout_width="match_parent"
             android:layout_height="20dp"
-            android:layout_below="@+id/music_name"
+            android:layout_below="@+id/singer_name"
             android:textSize="12dp"/>
 
-    </RelativeLayout>
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:layout_toRightOf="@+id/music_body">
-        <ImageView
-            android:id="@+id/image"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="right"/>
     </RelativeLayout>
 </RelativeLayout>
