--- a/app/src/main/res/layout/localmusic.xml
+++ b/app/src/main/res/layout/localmusic.xml
@@ -1,6 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+<RelativeLayout
+    android:background="@color/Red"
+    android:id="@+id/title"
+    android:layout_width="match_parent"
+    android:layout_height="50dp">
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/title_toolbar"
+        android:layout_width="50dp"
+        android:layout_height="match_parent"
+        android:layout_marginLeft="10dp"/>
+    <TextView
+        android:id="@+id/title_text"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginLeft="19dp"
+        android:textSize="20dp"
+        android:gravity="center|left"
+        android:textColor="@color/White"
+        android:layout_toRightOf="@+id/title_toolbar"
+        android:text="我的音乐"/>
+</RelativeLayout>
+    <com.google.android.material.tabs.TabLayout
+        android:background="@color/Red"
+        android:id="@+id/tablayout"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_below="@+id/title"
+        app:tabTextAppearance="@style/MyTabLayoutTextAppearance"/>
+    <androidx.viewpager.widget.ViewPager
+        android:id="@+id/viewpager"
+        android:layout_below="@+id/tablayout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
+</RelativeLayout>
