--- a/app/src/main/res/layout/downloadmusic.xml
+++ b/app/src/main/res/layout/downloadmusic.xml
@@ -12,13 +12,15 @@
 
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/downloadmusic_toolbar"
-            android:layout_width="50dp"
-            android:layout_height="50dp" />
+            android:layout_width="30dp"
+            android:layout_height="50dp"
+            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
         <TextView
             android:layout_width="180dp"
             android:layout_height="50dp"
             android:layout_toRightOf="@+id/downloadmusic_toolbar"
-            android:layout_marginLeft="20dp"
+            android:layout_marginLeft="12dp"
             android:textSize="20dp"
             android:gravity="center|left"
             android:textColor="@color/White"
