--- a/app/src/main/res/layout/mymusic_middle_layout.xml
+++ b/app/src/main/res/layout/mymusic_middle_layout.xml
@@ -72,6 +72,7 @@
             android:textStyle="bold" />
 
         <TextView
+            android:id="@+id/text2"
             android:layout_width="100dp"
             android:layout_height="30dp"
             android:layout_marginLeft="160dp"
@@ -82,6 +83,7 @@
             android:textStyle="bold" />
 
         <TextView
+            android:id="@+id/text3"
             android:layout_width="100dp"
             android:layout_height="30dp"
             android:layout_marginLeft="270dp"
