7-15 commit第三次提交

--- a/app/src/main/res/layout/my_favorite_music.xml
+++ b/app/src/main/res/layout/my_favorite_music.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <RelativeLayout
         android:id="@+id/toolbar_title"
         android:layout_width="match_parent"
@@ -13,8 +13,18 @@
             android:id="@+id/toolbar"
             android:layout_width="50dp"
             android:layout_height="50dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginLeft="10dp"/>
+            android:layout_marginTop="5dp"
+            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
+       <TextView
+           android:layout_width="match_parent"
+           android:layout_height="match_parent"
+           android:layout_toRightOf="@+id/toolbar"
+           android:gravity="left|center"
+           android:layout_marginLeft="10dp"
+           android:textColor="@color/White"
+           android:textSize="20dp"
+           android:text="我喜欢的音乐"/>
     </RelativeLayout>
     <Space
         android:id="@+id/space"
