--- a/app/src/main/res/layout/title_layout.xml
+++ b/app/src/main/res/layout/title_layout.xml
@@ -81,11 +81,13 @@
             android:layout_height="50dp" />
         <ImageView
             android:id="@+id/SearchMusic"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginTop="15dp"
             android:layout_alignParentRight="true"
             android:onClick="onClick"
-            android:src="@drawable/search"></ImageView>
+            android:src="@mipmap/search"></ImageView>
     </RelativeLayout>
 
 </LinearLayout>
