--- a/app/src/main/res/layout/mymusic_select.xml
+++ b/app/src/main/res/layout/mymusic_select.xml
@@ -9,30 +9,32 @@
     <TextView
         android:id="@+id/downloadmusic_text"
         android:layout_width="125dp"
-        android:layout_height="30dp"
-        android:gravity="bottom"
-        android:layout_marginLeft="10dp"
+        android:layout_height="80dp"
+        android:gravity="center"
         android:textSize="16dp"
         android:textStyle="bold"
+        android:drawableTop="@mipmap/download"
         android:textColor="@color/drak"
         android:text="下载管理" />
     <TextView
         android:id="@+id/localmusic_text"
-        android:gravity="bottom"
+        android:gravity="center"
         android:layout_width="125dp"
-        android:layout_height="30dp"
+        android:layout_height="80dp"
         android:textSize="16dp"
-        android:layout_marginLeft="155dp"
+        android:drawableTop="@mipmap/localmusic"
+        android:layout_marginLeft="125dp"
         android:textStyle="bold"
         android:textColor="@color/drak"
         android:text="本地音乐" />
     <TextView
         android:id="@+id/historymusic_text"
-        android:gravity="bottom"
+        android:gravity="center"
         android:layout_width="125dp"
-        android:layout_height="30dp"
+        android:layout_height="80dp"
+        android:drawableTop="@mipmap/historymusic"
         android:textSize="16dp"
-        android:layout_marginLeft="280dp"
+        android:layout_marginLeft="250dp"
         android:textStyle="bold"
         android:textColor="@color/drak"
         android:text="最近播放" />
