--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="White">#FFFFFF</color>
     <color name="white_black">#a3a3a3</color>
     <color name="whiter_black">#F7F7F7</color>
+    <color name="green">#31c17d</color>
 </resources>
