--- a/app/src/main/res/layout/play_music_main_pager.xml
+++ b/app/src/main/res/layout/play_music_main_pager.xml
@@ -46,18 +46,18 @@
      android:text="陈奕迅"/>
 <ImageView
     android:id="@+id/share"
-    android:layout_width="30dp"
+    android:layout_width="25dp"
     android:layout_marginTop="17dp"
-    android:layout_height="30dp"
+    android:layout_height="25dp"
     android:layout_marginLeft="10dp"
     android:layout_toRightOf="@id/text1"
-    android:background="@mipmap/share"/>
+    android:background="@mipmap/shares"/>
 </RelativeLayout>
     <RelativeLayout
         android:id="@+id/play_music_pager"
         android:layout_below="@+id/title"
         android:layout_width="match_parent"
-        android:layout_height="540dp">
+        android:layout_height="560dp">
 
         <RelativeLayout
             android:id="@+id/play_music_pager_up"
@@ -88,7 +88,7 @@
         android:id="@+id/control_panel"
         android:layout_width="match_parent"
         android:layout_height="130dp"
-        android:layout_marginTop="600dp"
+        android:layout_marginTop="620dp"
         android:orientation="vertical">
 
         <TextView
@@ -132,42 +132,50 @@
         </LinearLayout>
 
 
-        <RelativeLayout
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:padding="5dp">
+            android:layout_weight="3">
 
-            <Button
-                android:id="@+id/play_btn"
-                android:layout_width="60dp"
+            <ImageView
+                android:id="@+id/img1"
+                android:layout_width="0dp"
                 android:layout_height="60dp"
-                android:layout_centerInParent="true"
-                android:background="@mipmap/stop"
-                android:onClick="onClick"
-                android:text="" />
-
-            <Button
+                android:layout_marginTop="17dp"
+                android:layout_weight="1"
+                android:src="@mipmap/playmusicpic6"/>
+            <ImageView
                 android:id="@+id/pre_btn"
-                android:layout_width="55dp"
-                android:layout_height="55dp"
-                android:layout_centerVertical="true"
-                android:layout_marginRight="50dp"
-                android:layout_toLeftOf="@id/play_btn"
+                android:gravity="left"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="70dp"
                 android:background="@mipmap/pre"
-                android:onClick="onClick"
-                android:text="" />
-
-            <Button
+                android:layout_gravity="center"
+                android:onClick="onClick" />
+            <ImageView
+                android:id="@+id/play_btn"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:background="@mipmap/stop"
+                android:layout_gravity="center"
+                android:onClick="onClick" />
+            <ImageView
                 android:id="@+id/next_btn"
-                android:layout_width="55dp"
-                android:layout_height="55dp"
-                android:layout_centerVertical="true"
-                android:layout_marginLeft="50dp"
-                android:layout_toRightOf="@id/play_btn"
+                android:layout_width="0dp"
+                android:layout_height="70dp"
                 android:background="@mipmap/next"
-                android:onClick="onClick"
-                android:text="" />
-
-        </RelativeLayout>
+                android:layout_gravity="center"
+                android:layout_weight="1"
+                android:gravity="right"
+                android:onClick="onClick"/>
+            <ImageView
+                android:id="@+id/img3"
+                android:layout_width="0dp"
+                android:layout_marginTop="31dp"
+                android:layout_height="30dp"
+                android:layout_weight="1"
+                android:src="@mipmap/music_llist"/>
+        </LinearLayout>
     </LinearLayout>
 </RelativeLayout >
