--- a/app/src/main/res/layout/history_vedio_item.xml
+++ b/app/src/main/res/layout/history_vedio_item.xml
@@ -3,34 +3,58 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+    <RelativeLayout
+        android:id="@+id/title"
+        android:layout_width="match_parent"
+        android:layout_height="60dp">
+        <ImageView
+            android:id="@+id/image"
+            android:layout_width="300dp"
+            android:layout_height="match_parent" />
 <RelativeLayout
     android:id="@+id/relativelayout"
-    android:layout_width="match_parent"
-    android:layout_height="100dp">
-    <ImageView
-        android:id="@+id/image"
-        android:layout_marginLeft="10dp"
-        android:layout_marginTop="10dp"
-        android:layout_width="80dp"
-        android:layout_height="80dp"
-        android:scaleType="centerCrop"/>
+    android:layout_width="300dp"
+    android:layout_height="60dp">
     <TextView
         android:id="@+id/text1"
-        android:layout_toRightOf="@+id/image"
         android:layout_marginTop="10dp"
         android:layout_marginLeft="10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:singleLine="true"
+        android:ellipsize="marquee"
+        android:marqueeRepeatLimit="marquee_forever"
+        android:focusable="true"
+        android:focusableInTouchMode="true"
         android:textStyle="bold"
-        android:textSize="18dp"/>
+        android:textColor="@color/drak"
+        android:textSize="17dp"/>
     <TextView
         android:id="@+id/text2"
         android:layout_below="@+id/text1"
-        android:layout_toRightOf="@+id/image"
         android:layout_marginTop="5dp"
         android:layout_marginLeft="10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:singleLine="true"
+        android:ellipsize="marquee"
+        android:marqueeRepeatLimit="marquee_forever"
+        android:focusable="true"
+        android:focusableInTouchMode="true"
         android:textSize="12dp"/>
 </RelativeLayout>
+    <RelativeLayout
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:layout_toRightOf="@+id/relativelayout"
+        android:gravity="center|right">
+        <ImageView
+            android:id="@+id/image_thumb"
+            android:src="@mipmap/detail"
+            android:layout_width="25dp"
+            android:layout_height="60dp"
+            android:layout_marginRight="18dp"/>
+    </RelativeLayout>
+    </RelativeLayout>
 </RelativeLayout>
