--- a/app/src/main/res/layout/musiclist_create.xml
+++ b/app/src/main/res/layout/musiclist_create.xml
@@ -8,38 +8,28 @@
         android:id="@+id/test"
         android:layout_width="match_parent"
         android:layout_height="180dp">
-    <com.example.musicplayer_hezhao.util.RoundImageView
-        android:id="@+id/test_img"
-        android:layout_width="100dp"
-        android:layout_height="140dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginBottom="20dp"
-        android:scaleType="centerCrop"
-        android:src="@mipmap/pic7"/>
+        <com.example.musicplayer_hezhao.util.RoundImageView
+            android:id="@+id/test_img"
+            android:layout_width="120dp"
+            android:layout_height="140dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginBottom="20dp"
+            android:scaleType="centerCrop"
+            android:src="@mipmap/pic12"/>
         <TextView
             android:id="@+id/test_song"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="15dp"
             android:layout_toRightOf="@id/test_img"
-            android:text="明年今日"
+            android:text="歌单管理"
             android:textColor="@color/drak"
-            android:layout_marginTop="40dp"
-            android:textSize="15dp"/>
-        <TextView
-            android:id="@+id/test_name"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/test_song"
-            android:layout_marginLeft="15dp"
-            android:layout_toRightOf="@id/test_img"
-            android:text="陈奕迅"
-            android:textColor="@color/drak"
-            android:layout_marginTop="6dp"
-            android:textSize="11dp"/>
+            android:layout_marginTop="80dp"
+            android:textSize="20dp"/>
 
-</RelativeLayout>
+
+    </RelativeLayout>
     <View
         android:layout_below="@+id/test"
         android:layout_width="match_parent"
@@ -51,8 +41,8 @@
         android:textColor="@color/drak"
         android:layout_below="@+id/test"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:text="收藏"
+        android:layout_height="70dp"
+        android:text="创建歌单"
         android:textSize="15dp"
         android:textStyle="normal"/>
     <View
@@ -65,8 +55,8 @@
         android:gravity="center"
         android:layout_below="@+id/test2"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:text="分享"
+        android:layout_height="70dp"
+        android:text="批量删除歌单"
         android:textSize="15dp"
         android:textColor="@color/drak"
         android:textStyle="normal"/>
@@ -75,18 +65,8 @@
         android:layout_below="@+id/test3"
         android:layout_width="match_parent"
         android:background="#F7F7F7"
-        android:layout_height="1dp"/>
-    <TextView
-        android:id="@+id/test4"
-        android:gravity="center"
-        android:layout_below="@+id/test3"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:text="删除"
-        android:textColor="@color/drak"
-        android:textSize="15dp"
-        android:textStyle="normal"/>
+        android:layout_height="12dp"/>
     <Space
         android:layout_width="match_parent"
-        android:layout_height="3dp"/>
+        android:layout_height="13dp"/>
 </RelativeLayout>
