--- a/app/src/main/res/layout/mymusic_middle_layout.xml
+++ b/app/src/main/res/layout/mymusic_middle_layout.xml
@@ -6,91 +6,97 @@
     android:orientation="horizontal">
 
     <TextView
-        android:id="@+id/my_favorite_music_text"
+        android:id="@+id/text1"
         android:layout_width="match_parent"
         android:layout_height="20dp"
-        android:layout_marginLeft="12dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginLeft="15dp"
+        android:layout_marginTop="5dp"
         android:textColor="@color/drak"
         android:textStyle="bold"
-        android:text="我的音乐"
+        android:text="我喜欢的音乐"
         android:textSize="15dp" />
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="170dp"
-        android:layout_below="@+id/my_favorite_music_text">
-
+        android:layout_height="180dp"
+        android:gravity="left|center"
+        android:layout_below="@+id/text1">
         <com.example.musicplayer_hezhao.util.ChangeImageView
             android:id="@+id/favorite_image_view1"
-            android:layout_width="110dp"
+            android:layout_width="180dp"
             android:layout_height="170dp"
             android:layout_marginLeft="15dp"
             android:layout_marginTop="10dp"
-            android:alpha="0.5"
-            android:src="@mipmap/pic4"
+            android:scaleType="centerCrop"
+            android:src="@mipmap/pic17"
             app:piv_enablePanoramaMode="true"
             app:piv_invertScrollDirection="false"
             app:piv_show_scrollbar="true" />
-
         <com.example.musicplayer_hezhao.util.ChangeImageView
-            android:id="@+id/favorite_image_view2"
-            android:layout_width="110dp"
+            android:layout_width="180dp"
             android:layout_height="170dp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="10dp"
-            android:layout_toRightOf="@+id/favorite_image_view1"
-            android:alpha="0.5"
-            android:src="@mipmap/pic3"
-            app:piv_enablePanoramaMode="true"
-            app:piv_invertScrollDirection="false"
-            app:piv_show_scrollbar="true" />
+            android:background="@color/drak"
+            android:layout_marginLeft="15dp"
+            android:alpha="0.2"
+            android:layout_marginTop="10dp"/>
+<!--        <com.example.musicplayer_hezhao.util.ChangeImageView-->
+<!--            android:id="@+id/favorite_image_view2"-->
+<!--            android:layout_width="110dp"-->
+<!--            android:layout_height="170dp"-->
+<!--            android:layout_marginLeft="10dp"-->
+<!--            android:layout_marginTop="10dp"-->
+<!--            android:layout_toRightOf="@+id/favorite_image_view1"-->
+<!--            android:alpha="0.5"-->
+<!--            android:src="@mipmap/pic3"-->
+<!--            app:piv_enablePanoramaMode="true"-->
+<!--            app:piv_invertScrollDirection="false"-->
+<!--            app:piv_show_scrollbar="true" />-->
 
-        <com.example.musicplayer_hezhao.util.ChangeImageView
-            android:id="@+id/favorite_image_view3"
-            android:layout_width="110dp"
-            android:layout_height="170dp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginRight="10dp"
-            android:layout_toRightOf="@+id/favorite_image_view2"
-            android:alpha="0.5"
-            android:src="@mipmap/pic1"
-            app:piv_enablePanoramaMode="true"
-            app:piv_invertScrollDirection="false"
-            app:piv_show_scrollbar="true" />
+<!--        <com.example.musicplayer_hezhao.util.ChangeImageView-->
+<!--            android:id="@+id/favorite_image_view3"-->
+<!--            android:layout_width="110dp"-->
+<!--            android:layout_height="170dp"-->
+<!--            android:layout_marginLeft="10dp"-->
+<!--            android:layout_marginTop="10dp"-->
+<!--            android:layout_marginRight="10dp"-->
+<!--            android:layout_toRightOf="@+id/favorite_image_view2"-->
+<!--            android:alpha="0.5"-->
+<!--            android:src="@mipmap/pic1"-->
+<!--            app:piv_enablePanoramaMode="true"-->
+<!--            app:piv_invertScrollDirection="false"-->
+<!--            app:piv_show_scrollbar="true" />-->
 
-        <TextView
-            android:id="@+id/text1"
-            android:layout_width="150dp"
-            android:layout_height="30dp"
-            android:textColor="@color/drak"
-            android:layout_marginLeft="23dp"
-            android:layout_marginTop="60dp"
-            android:text="我喜欢的音乐"
-            android:textSize="15dp"
-            android:textStyle="bold" />
+<!--        <TextView-->
+<!--            android:id="@+id/text1"-->
+<!--            android:layout_width="150dp"-->
+<!--            android:layout_height="30dp"-->
+<!--            android:textColor="@color/drak"-->
+<!--            android:layout_marginLeft="23dp"-->
+<!--            android:layout_marginTop="60dp"-->
+<!--            android:text="我喜欢的音乐"-->
+<!--            android:textSize="15dp"-->
+<!--            android:textStyle="bold" />-->
 
-        <TextView
-            android:id="@+id/text2"
-            android:layout_width="100dp"
-            android:layout_height="30dp"
-            android:layout_marginLeft="160dp"
-            android:layout_marginTop="60dp"
-            android:textColor="@color/drak"
-            android:text="私人FM"
-            android:textSize="15dp"
-            android:textStyle="bold" />
+<!--        <TextView-->
+<!--            android:id="@+id/text2"-->
+<!--            android:layout_width="100dp"-->
+<!--            android:layout_height="30dp"-->
+<!--            android:layout_marginLeft="160dp"-->
+<!--            android:layout_marginTop="60dp"-->
+<!--            android:textColor="@color/drak"-->
+<!--            android:text="私人FM"-->
+<!--            android:textSize="15dp"-->
+<!--            android:textStyle="bold" />-->
 
-        <TextView
-            android:id="@+id/text3"
-            android:layout_width="100dp"
-            android:layout_height="30dp"
-            android:layout_marginLeft="270dp"
-            android:layout_marginTop="60dp"
-            android:textColor="@color/drak"
-            android:text="ACG专区"
-            android:textSize="15dp"
-            android:textStyle="bold" />
+<!--        <TextView-->
+<!--            android:id="@+id/text3"-->
+<!--            android:layout_width="100dp"-->
+<!--            android:layout_height="30dp"-->
+<!--            android:layout_marginLeft="270dp"-->
+<!--            android:layout_marginTop="60dp"-->
+<!--            android:textColor="@color/drak"-->
+<!--            android:text="ACG专区"-->
+<!--            android:textSize="15dp"-->
+<!--            android:textStyle="bold" />-->
     </RelativeLayout>
 </RelativeLayout>
