--- a/app/src/main/res/layout/play_music_main_pager.xml
+++ b/app/src/main/res/layout/play_music_main_pager.xml
@@ -5,10 +5,17 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
     <ImageView
-        android:id="@+id/play_music_background"
+    android:id="@+id/play_music_background"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@mipmap/pic23"
+    android:scaleType="centerCrop" />
+    <ImageView
+        android:id="@+id/play_music_backgrounds"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@mipmap/pic23"
+        android:background="@color/drak"
+        android:alpha="0.8"
         android:scaleType="fitXY" />
 <RelativeLayout
     android:id="@+id/title"
@@ -25,7 +32,7 @@
         android:layout_width="240dp"
         android:layout_height="30dp"
         android:layout_marginTop="10dp"
-        android:text="月黑风高ssssssssssssssssssssssss"
+        android:text="月黑风高"
         android:textColor="@color/White"
         android:textStyle="bold"
         android:singleLine="true"
