--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -31,5 +31,8 @@
         <item name="android:textSize">14dp</item>
         <item name="android:textStyle">normal</item>
     </style>
-
+    <style name="MyEditText" parent="Theme.AppCompat.Light">
+        <item name="colorControlNormal">@color/GRAY</item>
+        <item name="colorControlActivated">@color/drak</item>
+    </style>
 </resources>
