--- a/app/src/main/res/layout/my_music_bottom.xml
+++ b/app/src/main/res/layout/my_music_bottom.xml
@@ -7,6 +7,7 @@
 
     <RelativeLayout
         android:id="@+id/my_music_bottom_second"
+        android:layout_marginTop="10dp"
         android:layout_width="match_parent"
         android:layout_height="30dp">
 
