--- a/app/src/main/res/layout/my_music_recyclerview_item.xml
+++ b/app/src/main/res/layout/my_music_recyclerview_item.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content">
     <com.example.musicplayer_hezhao.util.RoundImageView
         android:id="@+id/my_music_img"
@@ -9,7 +9,8 @@
         android:layout_marginTop="15dp"
         android:layout_marginLeft="15dp"
         android:layout_width="150dp"
-        android:layout_height="150dp"/>
+        android:layout_height="150dp"
+        android:onClick="onClick"/>
     <TextView
         android:layout_toRightOf="@+id/my_music_img"
         android:layout_marginLeft="15dp"
@@ -19,14 +20,16 @@
         android:textStyle="bold"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="17dp"/>
+        android:textSize="17dp"
+        android:onClick="onClick"/>
     <TextView
         android:id="@+id/my_music_number"
         android:layout_marginTop="15dp"
         android:layout_marginLeft="15dp"
         android:layout_toRightOf="@+id/my_music_img"
         android:layout_below="@+id/my_music_text"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:textColor="@color/drak"
         android:textSize="12dp"/>
 </RelativeLayout>
