--- a/app/src/main/res/layout/musicadddialog.xml
+++ b/app/src/main/res/layout/musicadddialog.xml
@@ -10,24 +10,34 @@
         android:layout_height="180dp">
         <com.example.musicplayer_hezhao.util.RoundImageView
             android:id="@+id/test_img"
-            android:layout_width="120dp"
+            android:layout_width="100dp"
             android:layout_height="140dp"
             android:layout_marginLeft="10dp"
             android:layout_marginTop="20dp"
             android:layout_marginBottom="20dp"
             android:scaleType="centerCrop"
-            android:src="@mipmap/pic12"/>
+            android:src="@mipmap/pic7"/>
         <TextView
             android:id="@+id/test_song"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="15dp"
             android:layout_toRightOf="@id/test_img"
-            android:text="歌单管理"
+            android:text="明年今日"
             android:textColor="@color/drak"
-            android:layout_marginTop="80dp"
-            android:textSize="20dp"/>
-
+            android:layout_marginTop="40dp"
+            android:textSize="15dp"/>
+        <TextView
+            android:id="@+id/test_name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/test_song"
+            android:layout_marginLeft="15dp"
+            android:layout_toRightOf="@id/test_img"
+            android:text="陈奕迅"
+            android:textColor="@color/drak"
+            android:layout_marginTop="6dp"
+            android:textSize="11dp"/>
 
     </RelativeLayout>
     <View
@@ -36,37 +46,22 @@
         android:background="#F7F7F7"
         android:layout_height="1dp"/>
     <TextView
-        android:id="@+id/test2"
+        android:id="@+id/test5"
         android:gravity="center"
-        android:textColor="@color/drak"
         android:layout_below="@+id/test"
         android:layout_width="match_parent"
-        android:layout_height="70dp"
-        android:text="创建歌单"
-        android:textSize="14dp"
+        android:layout_height="50dp"
+        android:text="添加"
+        android:textColor="@color/drak"
+        android:textSize="15dp"
         android:textStyle="normal"/>
     <View
-        android:layout_below="@+id/test2"
+        android:layout_below="@+id/test5"
         android:layout_width="match_parent"
         android:background="#F7F7F7"
         android:layout_height="1dp"/>
-    <TextView
-        android:id="@+id/test3"
-        android:gravity="center"
-        android:layout_below="@+id/test2"
-        android:layout_width="match_parent"
-        android:layout_height="70dp"
-        android:text="歌单管理"
-        android:textSize="14dp"
-        android:textColor="@color/drak"
-        android:textStyle="normal"/>
-
-    <View
-        android:layout_below="@+id/test3"
-        android:layout_width="match_parent"
-        android:background="#F7F7F7"
-        android:layout_height="12dp"/>
     <Space
+        android:layout_below="@+id/test5"
         android:layout_width="match_parent"
-        android:layout_height="13dp"/>
+        android:layout_height="33dp"/>
 </RelativeLayout>
