--- a/app/src/main/res/layout/playing_music_text.xml
+++ b/app/src/main/res/layout/playing_music_text.xml
@@ -12,15 +12,16 @@
         android:layout_marginTop="30dp"/>
     <com.example.musicplayer_hezhao.util.MyTextView
         android:id="@+id/play_music_text"
+        android:gravity="center"
         android:layout_toRightOf="@+id/play_music_img"
-        android:text="窗边故事-周杰伦ASDFGHJKLMNBVCXZ"
+        android:text="窗边故事-周杰伦 窗边故事-周杰伦 窗边故事-周杰伦"
         android:textStyle="bold"
         android:singleLine="true"
         android:ellipsize="marquee"
         android:marqueeRepeatLimit="marquee_forever"
         android:focusable="true"
         android:focusableInTouchMode="true"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="26dp"
         android:layout_marginLeft="15dp"
         android:layout_width="180dp"
         android:layout_height="35dp"/>
@@ -31,7 +32,7 @@
     android:layout_width="40dp"
     android:layout_height="40dp"
     android:layout_marginLeft="15dp"
-    android:src="@mipmap/play_music"
+    android:src="@mipmap/stopingmusic"
     android:layout_marginTop="25dp"/>
     <ImageView
         android:id="@+id/play_music"
