--- a/app/src/main/res/layout/playing_music_text.xml
+++ b/app/src/main/res/layout/playing_music_text.xml
@@ -2,45 +2,11 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-    <com.example.musicplayer_hezhao.tool.CircleImageView
-        android:id="@+id/play_music_img"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:src="@mipmap/pic1"
-        android:layout_marginLeft="15dp"
-        android:layout_marginTop="30dp"/>
-    <com.example.musicplayer_hezhao.util.MyTextView
-        android:id="@+id/play_music_text"
-        android:gravity="center"
-        android:layout_toRightOf="@+id/play_music_img"
-        android:text="窗边故事-周杰伦 窗边故事-周杰伦 窗边故事-周杰伦"
-        android:textStyle="bold"
-        android:singleLine="true"
-        android:ellipsize="marquee"
-        android:marqueeRepeatLimit="marquee_forever"
-        android:focusable="true"
-        android:focusableInTouchMode="true"
-        android:layout_marginTop="26dp"
-        android:layout_marginLeft="15dp"
-        android:layout_width="180dp"
-        android:layout_height="35dp"/>
-
-<ImageView
-    android:id="@+id/play_music_buttom"
-    android:layout_toRightOf="@+id/play_music_text"
-    android:layout_width="40dp"
-    android:layout_height="40dp"
-    android:layout_marginLeft="15dp"
-    android:src="@mipmap/stopingmusic"
-    android:layout_marginTop="25dp"/>
-    <ImageView
-        android:id="@+id/play_music"
-        android:layout_toRightOf="@+id/play_music_buttom"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_marginLeft="10dp"
-        android:src="@mipmap/play_music_copy"
-        android:layout_marginTop="25dp"/>
+    android:layout_height="90dp">
+    <com.example.musicplayer_hezhao.util.customViewpagerView
+        android:id="@+id/viewpager"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+    </com.example.musicplayer_hezhao.util.customViewpagerView>
 
 </RelativeLayout>
