--- a/app/src/main/res/layout/playing_music_text.xml
+++ b/app/src/main/res/layout/playing_music_text.xml
@@ -2,11 +2,13 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="90dp">
-    <com.example.musicplayer_hezhao.util.customViewpagerView
-        android:id="@+id/viewpager"
+    android:layout_height="match_parent"
+    android:orientation="horizontal"
+    android:focusable="true"
+    android:focusableInTouchMode="true">
+    <com.example.musicplayer_hezhao.util.VpRecyView
+        android:id="@+id/recyclerview"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-    </com.example.musicplayer_hezhao.util.customViewpagerView>
-
+    </com.example.musicplayer_hezhao.util.VpRecyView>
 </RelativeLayout>
