--- a/app/src/main/res/layout/regist_item.xml
+++ b/app/src/main/res/layout/regist_item.xml
@@ -22,7 +22,7 @@
         android:drawablePadding="10dp"
         android:paddingLeft="8dp"
         android:gravity="center_vertical"
-        android:hint="请输入用户名"
+        android:hint="username"
         android:singleLine="true"
         android:textColor="#000000"
         android:textColorHint="#000000"
@@ -39,7 +39,7 @@
         android:drawablePadding="10dp"
         android:paddingLeft="8dp"
         android:gravity="center_vertical"
-        android:hint="请输入密码"
+        android:hint="password"
         android:inputType="textPassword"
         android:singleLine="true"
         android:textColor="#000000"
@@ -57,23 +57,66 @@
         android:drawablePadding="10dp"
         android:paddingLeft="8dp"
         android:gravity="center_vertical"
-        android:hint="请再次输入密码"
+        android:hint="password again"
         android:inputType="textPassword"
         android:singleLine="true"
         android:textColor="#000000"
         android:textColorHint="#000000"
         android:textSize="14sp"/>
-
+    <EditText
+        android:layout_below="@id/et_psw_again"
+        android:id="@+id/phone"
+        android:layout_width="fill_parent"
+        android:layout_height="48dp"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginLeft="35dp"
+        android:layout_marginRight="35dp"
+        android:drawablePadding="10dp"
+        android:paddingLeft="8dp"
+        android:gravity="center_vertical"
+        android:hint="Phone"
+        android:inputType="textPassword"
+        android:singleLine="true"
+        android:textColor="#000000"
+        android:textColorHint="#000000"
+        android:textSize="14sp"/>
+    <EditText
+        android:layout_below="@id/phone"
+        android:id="@+id/phone_check"
+        android:layout_width="200dp"
+        android:layout_height="48dp"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginLeft="35dp"
+        android:drawablePadding="10dp"
+        android:paddingLeft="8dp"
+        android:gravity="center_vertical"
+        android:hint="email"
+        android:inputType="textPassword"
+        android:singleLine="true"
+        android:textColor="#000000"
+        android:textColorHint="#000000"
+        android:textSize="14sp"/>
+    <Button
+        android:id="@+id/send_check_email"
+        android:layout_toRightOf="@+id/phone_check"
+        android:layout_below="@+id/phone"
+        android:layout_width="fill_parent"
+        android:layout_height="48dp"
+        android:layout_marginRight="35dp"
+        android:layout_gravity="center_horizontal"
+        android:text="Send"
+        android:textColor="@android:color/background_dark"
+        android:textSize="18sp"/>
     <Button
         android:id="@+id/btn_login"
-        android:layout_below="@+id/et_psw_again"
+        android:layout_below="@+id/phone_check"
         android:layout_width="fill_parent"
         android:layout_height="40dp"
         android:layout_marginTop="15dp"
         android:layout_marginLeft="35dp"
         android:layout_marginRight="35dp"
         android:layout_gravity="center_horizontal"
-        android:text="注 册"
+        android:text="register"
         android:textColor="@android:color/background_dark"
         android:textSize="18sp"/>
 </RelativeLayout>
